--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ email: seungbin201803@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://seungbin201803.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-github_username: ejjoo
+github_username: seungbin201803
 highlighter: rouge
 svg:
   optimize: true
